--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-time-machine
+title: Bienvenido a la página de enseñanza-aprendizaje de José Javier Cuello Camargo
+description: Página de prueba - Bajo construcción.
