--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-architect
 title: GitWeb de José Javier Cuello Camargo, dedicada al estudio del ajedrez.
 description: Página en construcción.
